unpackaged/main/default/objects/Order/fields/Assigned_Store__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related Store.</description>
    <label>Assigned Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>