unpackaged/main/default/objects/Order/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMPETITOR_OFFER</fullName>
                <label>Competitor offer</label>
            </value>
            <value>
                <fullName>CREDIT_REJECTED</fullName>
                <label>Credit Rejected</label>
            </value>
            <value>
                <fullName>CUSTOMER_CANCELLED</fullName>
                <label>Customer Cancelled</label>
            </value>
            <value>
                <fullName>ITEM_NOT_AVAILABLE</fullName>
                <label>Item not available</label>
            </value>
            <value>
                <fullName>KITCHEN_REFUND</fullName>
                <label>Kitchen In-Home Refund</label>
            </value>
            <value>
                <fullName>LEAD_TIME</fullName>
                <label>Lead time</label>
            </value>
            <value>
                <fullName>NO_LONGER_REQUIRED</fullName>
                <label>No longer required</label>
            </value>
            <value>
                <fullName>ORDER_ENTRY_ERROR</fullName>
                <label>Order Entry Error</label>
            </value>
            <value>
                <fullName>ORDER_ERROR</fullName>
                <label>Order error</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>OUT_OF_STOCK</fullName>
                <label>Out of stock</label>
            </value>
            <value>
                <fullName>PRICING</fullName>
                <label>Pricing</label>
            </value>
            <value>
                <fullName>PROCESSING_ERROR</fullName>
                <label>Processing Error</label>
            </value>
            <value>
                <fullName>RANGE</fullName>
                <label>Range</label>
            </value>
            <value>
                <fullName>SUBMITTED_TOO_LATE</fullName>
                <label>Order Submitted too late</label>
            </value>
            <value>
                <fullName>SYSTEM_CANCELLATION</fullName>
                <label>System Cancellation</label>
            </value>
            <value>
                <fullName>WITHDRAWN_BY_CUSTOMER</fullName>
                <label>Credit Request withdrawn by Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>