unpackaged/main/default/objects/Order/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>This pulls in the Mobile number of the Delivery Contact</description>
    <formula>ShipToContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>