unpackaged/main/default/objects/Order/fields/COS_Order_Link__c.field-meta.xml
<CustomField>
    <fullName>COS_Order_Link__c</fullName>
    <formula>HYPERLINK( $CustomMetadata.Initialisation__mdt.CCRM_Initialisation.COS_Existing_Quote_URL__c
&amp;COS_ID__c ,
&quot;Click to view COS Order&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COS Order Link</label>
    <type>Text</type>
</CustomField>