unpackaged/main/default/objects/Order/fields/COS_Token__c.field-meta.xml
<CustomField>
    <fullName>COS_Token__c</fullName>
    <description>to be used in relation to CCRM-6890/6892</description>
    <label>COS Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>