unpackaged/main/default/objects/Order/fields/Customer_Job_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Job_Address__c</fullName>
    <label>Customer Job Address</label>
    <type>TextArea</type>
</CustomField>