unpackaged/main/default/objects/Order/fields/Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact__c</fullName>
    <description>Contact name for the delivery of the order</description>
    <label>Delivery Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>