unpackaged/main/default/objects/Order/fields/Discount_incl_GST__c.field-meta.xml
<CustomField>
    <fullName>Discount_incl_GST__c</fullName>
    <label>Discount (incl GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>