unpackaged/main/default/objects/Order/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Date to follow up on the Order</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>