unpackaged/main/default/objects/Order/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>