unpackaged/main/default/objects/Order/fields/My_Orders__c.field-meta.xml
<CustomField>
    <fullName>My_Orders__c</fullName>
    <formula>IF(Opportunity.Owner.Username = $User.Username, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Orders</label>
    <type>Checkbox</type>
</CustomField>