unpackaged/main/default/objects/Order/fields/On_Hold__c.field-meta.xml
<CustomField>
    <fullName>On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When order is set to on hold by COS</description>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>