unpackaged/main/default/objects/Order/fields/PowerPass_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>PowerPass_Account_Number__c</fullName>
    <formula>Account.Power_Pass_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PowerPass Account Number</label>
    <type>Text</type>
</CustomField>