unpackaged/main/default/objects/Order/fields/Prices_Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Prices_Validity_Date__c</fullName>
    <label>Prices Validity Date</label>
    <type>Date</type>
</CustomField>