unpackaged/main/default/objects/Order/fields/Total_GP__c.field-meta.xml
<CustomField>
    <fullName>Total_GP__c</fullName>
    <description>This field calculates the Total GP for an order</description>
    <formula>(Total_Value_excl_GST__c -  Total_Cost_excl_GST__c)/ Total_Value_excl_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>