unpackaged/main/default/objects/Order/fields/Total_Value_incl_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_incl_GST__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Value including GST of the Order</description>
    <label>Total Value (incl GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>