unpackaged/main/default/objects/Order/listViews/Admin.listView-meta.xml
<ListView>
    <fullName>Admin</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>iuser</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Payment_Required</value>
    </filters>
    <label>Admin</label>
    <sharedTo>
        <group>System_Administrator</group>
    </sharedTo>
</ListView>