unpackaged/main/default/objects/Order/listViews/My_Orders.listView-meta.xml
<ListView>
    <fullName>My_Orders</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Total_Value_excl_GST__c</columns>
    <columns>Total_Value_incl_GST__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Orders__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Orders</label>
</ListView>